--- a/kubernetes/db-deployment.yaml
+++ b/kubernetes/db-deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-deployment
+  name: db-deployment
   namespace: kivey
   labels:
-    app: app
+    app: db
 spec:
   replicas: 1
   strategy:
@@ -12,17 +12,17 @@ spec:
   minReadySeconds: 20
   selector:
     matchLabels:
-      app: app
+      app: db
   template:
     metadata:
       labels:
-        app: app
+        app: db
     spec:
       containers:
       - envFrom:
         - secretRef:
             name: db-secret
-        name: app-deployment
-        image: harbor.dev.afsmtddso.com/kivey-harbor-project/app:49d0fd3-1e0b5cc
+        name: db-deployment
+        image: harbor.dev.afsmtddso.com/kivey-harbor-project/db:49d0fd3-1e0b5cc
         ports:
-        - containerPort: 5000
+        - containerPort: 5432
